--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -10,17 +10,14 @@
     </ul>
   </div>
   <% end %>
-  <p>
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
-  </p>
- 
-  <p>
-    <%= f.label :text %><br>
-    <%= f.text_area :text %>
-  </p>
- 
-  <p>
-    <%= f.submit %>
-  </p>
+  <div class="input-group"> 
+    <span class="input-group-addon"><span class="glyphicon glyphicon-th-large"></span></span>
+    <%= f.text_field :title, :class => "form-control", :placeholder => "title" %>
+  </div>
+  <br>
+  <div class="input-group"> 
+    <span class="input-group-addon"><span class="glyphicon glyphicon-pencil"></span></span>
+    <%= f.text_area :text, :class => "form-control", :placeholder => "body", :rows => 10 %>
+  </div>
+      <%= f.submit :class => "btn btn-info navbar-btn" %>
 <% end %>
