--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,9 +1,10 @@
-<%= link_to 'New article', new_article_path %>
-<table>
+<% if user_signed_in? %>
+<%= link_to 'New article', new_article_path, :class => "btn btn-default navbar-btn" %>
+<table class="table table-hover">
   <tr>
     <th>Title</th>
     <th>Text</th>
-    <th colspan="2"></th>
+    <th colspan="3"><center>Functions</center></th>
   </tr>
  
 <% @articles.each do |article| %>
@@ -17,3 +18,6 @@
   </tr>
 <% end %>
 </table>
+<% else %>
+<h1>please login to continue </h1>
+<% end %>
