--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,18 +1,15 @@
-<p>
-  <strong>Title:</strong>
+<h1>
   <%= @article.title %>
-</p>
- 
+</h1>
 <p>
-  <strong>Text:</strong>
   <%= @article.text %>
 </p>
-
-<h2>Comments</h2>
+<hr>
+<h4>Comments</h4>
 <%= render @article.comments %>
 
-<h2>Add a comment:</h2>
 <%= render "comments/form" %>
-
-<%= link_to 'Edit Article', edit_article_path(@article) %>
-<%= link_to 'Back to Articles', articles_path %>
+<% if user_signed_in? %>
+  <%= link_to 'Edit Article', edit_article_path(@article) %>
+<% end %>
+<%= link_to 'Back to Articles', welcome_path %>
