--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,5 +1,4 @@
-<h2>Sign up</h2>
-
+<% if user_signed_in? %>
 <%= form_for(resource, :as => resource_name, :url => registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
 
@@ -14,5 +13,5 @@
 
   <div><%= f.submit "Sign up" %></div>
 <% end %>
-
 <%= render "devise/shared/links" %>
+<% end %>
