--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,7 +1,9 @@
-<div class="blog-post">
-<% @articles.each do |article| %>
-    <h2 class="blog-post-title"><%= article.title %></h2>
-    <p class="blog-post-meta">by: <%= article.author %><span>
+<% @articles.reverse.each do |article| %>
+  <div class="blog-post">
+    <%= link_to(article_path(article)) do %>
+      <h2 class="blog-post-title"><%= article.text %></h2>
+    <% end %>
+    <p class="blog-post-meta">by: <%= article.author %></p>
     <p><%= article.text %></p>
+  </div>
 <% end %>
-</div>
