--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -14,4 +14,6 @@
   <div><%= f.submit "Sign up" %></div>
 <% end %>
 <%= render "devise/shared/links" %>
+<% else %>
+  <h2>Oooh, you know dis system eh?</h2>
 <% end %>
