--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,15 +1,18 @@
+<% if user_signed_in? %>
+  <%= link_to 'Edit Article', edit_article_path(@article) %>
+<% end %>
+
+  <%= link_to 'Back to Articles', welcome_path %>
 <h1>
   <%= @article.title %>
 </h1>
-<p>
-  <%= @article.text %>
-</p>
+  <% @article.long.each do |graph| %>
+  <p>
+  <%= graph %>
+  </p>
+  <% end %>
 <hr>
 <h4>Comments</h4>
 <%= render @article.comments %>
 
 <%= render "comments/form" %>
-<% if user_signed_in? %>
-  <%= link_to 'Edit Article', edit_article_path(@article) %>
-<% end %>
-<%= link_to 'Back to Articles', welcome_path %>
